--- a/hl.cabal
+++ b/hl.cabal
@@ -24,7 +24,8 @@ executable hl
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    other-modules:
+      Day1
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
