--- a/hl.cabal
+++ b/hl.cabal
@@ -25,7 +25,8 @@ executable hl
 
     -- Modules included in this executable, other than Main.
     other-modules:
-      Day1
+      Day1,
+      Day2
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
