--- a/hl.cabal
+++ b/hl.cabal
@@ -26,7 +26,8 @@ executable hl
     -- Modules included in this executable, other than Main.
     other-modules:
       Day1,
-      Day2
+      Day2,
+      Day3
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
