--- a/hl.cabal
+++ b/hl.cabal
@@ -27,7 +27,8 @@ executable hl
     other-modules:
       Day1,
       Day2,
-      Day3
+      Day3,
+      Day4
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
