--- a/hl.cabal
+++ b/hl.cabal
@@ -28,7 +28,8 @@ executable hl
       Day1,
       Day2,
       Day3,
-      Day4
+      Day4,
+      Day5
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
