day 6 input and output

--- a/hl.cabal
+++ b/hl.cabal
@@ -29,7 +29,8 @@ executable hl
       Day2,
       Day3,
       Day4,
-      Day5
+      Day5,
+      Day6
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
