day7 Functionally Solving Problems

--- a/hl.cabal
+++ b/hl.cabal
@@ -30,7 +30,8 @@ executable hl
       Day3,
       Day4,
       Day5,
-      Day6
+      Day6,
+      Day7
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
