day 8 functors and applicative functors

--- a/hl.cabal
+++ b/hl.cabal
@@ -31,7 +31,8 @@ executable hl
       Day4,
       Day5,
       Day6,
-      Day7
+      Day7,
+      Day8
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
